--- a/src/site/notes/Cpp/测试.md
+++ b/src/site/notes/Cpp/测试.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-home":false,"permalink":"/cpp//","dgPassFrontmatter":true}
+{"dg-publish":true,"permalink":"/cpp//"}
 ---
 
 
