--- a/src/site/notes/Cpp/测试.md
+++ b/src/site/notes/Cpp/测试.md
@@ -1,10 +1,10 @@
 ---
-{"dg-publish":true,"permalink":"/cpp//"}
+{"dg-publish":true,"dg-home":false,"permalink":"/cpp//","dgPassFrontmatter":true}
 ---
 
 
 这是分支里的一个测试案例
 
---
+
 HELLO WORLD
---
+---
